# comp-gen

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.org  aec.py  artifact-evaluation.org  run.sh
aec/: fedora-build-figure-image.sh  fedora-build-image.sh  install.sh  linux-run.sh  mac-run.sh  run.sh  runecho.sh  server-config.json  start-server.sh
aec/latex/: ae.tex
aella/: .dir-locals.el  .gitignore  Cargo.toml  Makefile  README.org  fact.s  hello_world.s  iter1.json  iter2.json  iter3.json  iter4.json  rule_distribution.csv  test.csv  test.json
aella/examples/: cse-opt.aella  cse.aella  fact.aella  fact_comp.aella  simple.aella  simple_comp.aella
aella/src/: cost.rs  interpret.rs  lang.rs  main.rs  parser.rs  syntax.pest  synthesis.rs
asplos24/: reviews.md
comp-gen/: Cargo.toml
comp-gen/src/: compiler.rs  config.rs  cost.rs  lib.rs  phases.rs  run.rs  stats.rs
dios-lang/: .gitignore  Cargo.toml  README.org  foo.txt  foo2.txt  rule_distribution.csv  ruleset.json  synth.json
dios-lang/candidates/: after_adding_vecadd.json  candidate_ruleset_post_cvec_match.json  candidate_ruleset_post_minimization.json  candidate_ruleset_post_minimization1.json  depth3_ruleset.json
dios-lang/configs/: all_ops_no_constants.json
dios-lang/rulesets/: ruleset.json
dios-lang/src/: alpha_rename.rs  cost.rs  desugar.rs  error.rs  fuzz.rs  handwritten.rs  lang.rs  letify.rs  library_learning.rs  main.rs  recexpr_helpers.rs  rewriteconcats.rs  smt.rs  stringconversion.rs  synthesis.rs
experiments/: README.org  compile.json  compile_alt_cost.json  debug_sgn.json  expanding_rules.json  kernel.c  run.org  wack.json
experiments/configs/: all-backoff.json  all-simple.json  loop_alt_cost_noprune_t180.json  loop_alt_cost_noprune_t1800.json  loop_alt_cost_t180.json  loop_alt_cost_t1800.json  loop_alt_cost_t18000.json  loop_alt_cost_t180_n_opt.json  loop_alt_cost_t180_w_opt.json  loop_alt_cost_t360.json  loop_dios_cost.json  loop_more_compilation.json  loop_more_expansion.json  loop_no_opt_alt_cost_t1800.json  none.json  phased.json  phased_no_opt.json  phased_no_opt_alt_cost.json
experiments/configs/ablation/: config_a-0.5_b0.json  config_a-0.5_b1.json  config_a-0.5_b10.json  config_a-0.5_b15.json  config_a-0.5_b2.json  config_a-0.5_b20.json  config_a-0.5_b2020.json  config_a-0.5_b2021.json  config_a-0.5_b2022.json  config_a-0.5_b2025.json  config_a-0.5_b3.json  config_a-0.5_b30.json  config_a-0.5_b4.json  config_a-0.5_b5.json  config_a-0.5_b6.json  config_a-10_b0.json  config_a-10_b1.json  config_a-10_b10.json  config_a-10_b15.json  config_a-10_b2.json  config_a-10_b20.json  config_a-10_b2020.json  config_a-10_b2021.json  config_a-10_b2022.json  config_a-10_b3.json  config_a-10_b30.json  config_a-10_b4.json  config_a-10_b5.json  config_a-10_b6.json  config_a-15_b0.json  config_a-15_b1.json  config_a-15_b10.json  config_a-15_b15.json  config_a-15_b2.json  config_a-15_b20.json  config_a-15_b2020.json  config_a-15_b2021.json  config_a-15_b2022.json  config_a-15_b2025.json  config_a-15_b3.json  (+199 more)
experiments/cycle-estimation/: 2d-conv-3x3_3x3_iter.csv  README.org  greedy_cost_works.csv
experiments/cycle-estimation/2d-conv/: 2d-conv.out  harness.c  (+1 more)
experiments/filtering/: test.json
experiments/manual_expansion/: manual_rules.json
experiments/rule-generation/: run.py  run.sh
experiments/rulesets/: expanding_vecmac.json  original_dios_rules.json  ruleset_timeout4000.json  ruleset_timeout43200.json  ruleset_timeout432000.json
ruler/: .dir-locals.el  Cargo.toml
ruler/src/: bv.rs  cli.rs  convert_sexp.rs  derive.rs  equality.rs  language.rs  lib.rs  logger.rs  recipe_utils.rs
ruler/src/enumo/: rule.rs  ruleset.rs
ruler/tests/: bool.rs  bv8.rs  trig.rs
server/: .gitignore  config.json  correlate.py  estimate.py  find_rules.py  jobs.py  process.py  query.py  query2.py  rule_distribution.csv  server.py  sync.py  utils.py  utils.pyi
server/_old_experiments_/: README.org  rule-distribution-hist.py
server/configs/: noprune.json  prune.json
server/figs/: Plots.org  compile-times.tikz  cycles-performance.tikz  instruction.tex  pruning.tikz  ruleset-ablation.tikz
server/harnesses/: 2d-conv.c  mat-mul.c  q-prod.c  qr-decomp.c  utils.h
server/instruction-rulesets/: base.json  muls.json  mulsgn.json  mulsgn_muls.json  sqrtsgn.json
server/mat-mul-exploration/: Run.org  autovec.c  autovec.s  cycles.csv  harness.c  isaria.c  isaria.s
server/mat-mul-out/: outputs.rkt
server/overview/: compile.json  config.json  params.json  run.sh
server/rulesets/: ruleset-ruler2-depth6-prod-vecmac-vecmuls.json  ruleset_ruler2_depth4_extended.json  ruleset_timeout8000.json
server/synthesis/: base.json
src/: lib.rs
(+441 files in other folders)
