[package]
name = "comp-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
egg = { path = "../../egg", version = "0.9.5"}
env_logger = "0.9.1"
hdrhistogram = "7.5.2"
histogram = "0.7.0"
json = "0.12.4"
log = "0.4.17"
plotlib = "0.5.1"
ruler = { path = "../ruler", default-features = false }
serde = "1.0.145"
statrs = "0.16.0"
