[package]
name = "dios-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
log = "0.4"
env_logger = "0.9.1"
serde = "1.0.145"
serde_json = "1.0.85"
comp-gen = { path = "../comp-gen" }
itertools = "0.10.5"
rand_pcg = "0.2"
rand = { version = "0.7", default-features = false, features = ["std"] }
num = "0.3"
num-bigint = { version = "0.3", features = ["rand"] }
egg = "0.8.1"
rustc-hash = "1"
z3 = { version = "0.11.2", features = ["static-link-z3"] }
