[package]
name = "dios-lang"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = false

[dependencies]
argh = "0.1.9"
log = "0.4"
env_logger = "0.9.1"
serde = "1.0.145"
serde_json = "1.0.85"
comp-gen = { path = "../comp-gen" }
ruler = { path = "../ruler" }
itertools = "0.10.5"
rand_pcg = "0.2"
rand = { version = "0.7", default-features = false, features = ["std"] }
num = "0.3"
num-bigint = { version = "0.3", features = ["rand"] }
z3 = "0.11.2"
rustc-hash = "1"
lexpr = "0.2.6"
thiserror = "1.0.37"
anyhow = "1.0.65"
babble = { path = "../babble" }
babble-macros = { path = "../babble/babble-macros" }
egg = { git = "https://github.com/egraphs-good/egg.git" }
symbol_table = { version = "0.3.0", features = ["global"] }

[target.'cfg(target_os = "macos")'.dependencies]
z3 = { version = "0.11.2", features = ["static-link-z3"] }
