[package]
name = "ruler"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>", "Chandrakana Nandi <cnandi@cs.washington.edu>"]
edition = "2018"

[features]
serialize = []
default = []

[dependencies]
log = "0.4"
env_logger = { version = "0.7", default-features = false }
rand_pcg = { version = "0.2", features = ["serde1"] }
rand = { version = "0.7", default-features = false, features = ["std"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0"
ciborium = "0.2.0"
indexmap = "1"
num = "0.3"
num-bigint = { version = "0.3", features = ["rand"] }
ordered-float = "2.0.0"
libm = "0.2.1"
float-cmp = "0.8.0"
lazy_static = "1.4.0"
itertools = "0.10"
rustc-hash = "1"
symbolic_expressions = "5"
rayon = "1"
smallvec = { version = "1.6", features = ["union", "const_generics"] }
egg = { git = "https://github.com/sgpthomas/egg.git", branch = "egraph_map" }

# [dependencies.egg]
# git = "https://github.com/sgpthomas/egg.git"
# branch = "update_symbol_table"
# features = ["serde-1"]
